fixed navbar styling on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,10 @@ nav > a > img {
 }
 
 @media (max-width: 700px) {
+  nav {
+    background-color: rgb(18, 18, 18);
+    height: 50px;
+  }
   .hero h1 {
     font-size: 40px;
     line-height: 62px;
